--- a/css/StyleSheet1.css
+++ b/css/StyleSheet1.css
@@ -73,12 +73,12 @@
 
 .sb-create-custom-api-cta .container.create-custom-api-cta h2 {
     color: var(--clr-orange);
-    font-size: 26px !important;
+    font-size: 26px;
     font-weight: 700;
 }
 
 .sb-create-custom-api-cta .container.create-custom-api-cta h3 {
-    font-size: 34px !important;
+    font-size: 34px;
     font-weight: 700;
 }
 
@@ -159,6 +159,8 @@
 }
 
 
+/* Class Utilities */
+
 
 .padding-tb-50 {
     padding: 50px 0px;
@@ -236,13 +238,10 @@
 }
 
 .btn-gray:hover {
-        background: transparent;
-        color: #333;
-        border: 1px solid #999;
-    
-    
-    }
-
+    background: transparent;
+    color: #333;
+    border: 1px solid #999;
+}
 
 .btn-white {
     background: #fff;
@@ -254,13 +253,11 @@
     transition-duration: 0.4s;
 }
 
-    .btn-white:hover {
-        background: var(--clr-orange);
-        color: #fff;
-        border: 1px solid #999;
-    }
-
-
+.btn-white:hover {
+    background: var(--clr-orange);
+    color: #fff;
+    border: 1px solid #999;
+}
 
 .h3-orange {
     color: var(--clr-orange);
@@ -2301,6 +2298,38 @@ th.apva-pvt-border {
 
 @media (max-width: 576px) {
 
+    #ipa-card-carousel-api .card.mt-mobile-30 {
+        margin-top: 30px
+    }
+
+    #ipa-batch-append-tool img {
+        width: 150px
+    }
+
+    #ipa-hero h2 {
+        font-size: 26px
+    }
+
+    #ipa-hero h3 {
+        font-size: 36px
+    }
+
+    #ipa-hero p {
+        font-size: 16px
+    }
+
+    #ipa-batch-append-tool h2 {
+        font-size: 20px
+    }
+
+    #ipa-batch-append-tool h3 {
+        font-size: 26px
+    }
+
+    #ipa-customers-partners h2 {
+        font-size: 20px
+    }
+
     #apva-carousel .owl-carousel .owl-next {
         right: 0px !important
     }
@@ -2311,6 +2340,7 @@ th.apva-pvt-border {
 
     .sb-create-custom-api-cta .container.create-custom-api-cta h2 {
         text-align: left !important;
+        font-size: 20px !important
     }
 
     .sb-create-custom-api-cta .container.create-custom-api-cta h3 {
@@ -2555,33 +2585,33 @@ th.apva-pvt-border {
         gap: 6px
     }
 
-        .ao-logo-carousel-mobile img {
+    .ao-logo-carousel-mobile img {
         width: 90px !important;
         margin: 0 auto
-        }
+    }
 
-        .ao-brand-customers-partners-mobile h2 {
-            text-wrap: nowrap;
-            font-size: 24px !important;
-            color: #373737
-        }
+    .ao-brand-customers-partners-mobile h2 {
+         text-wrap: nowrap;
+         font-size: 24px !important;
+         color: #373737
+    }
 
-        .ao-brand-customers-partners-mobile h2 span {
+    .ao-brand-customers-partners-mobile h2 span {
             text-wrap: nowrap;
             font-size: 24px !important
-        }
+    }
 
-        .ao-brand-customers-partners-mobile img{
+    .ao-brand-customers-partners-mobile img{
             width: 150px
-        }
+    }
 
 
-        #ao-features-benefits h3 {
+    #ao-features-benefits h3 {
             font-size: 16px;
             font-weight: 400;            
-        }
+    }
 
-        #ao-features-benefits img {
+    #ao-features-benefits img {
             height: 120px;
         }
 
