--- a/css/StyleSheet1.css
+++ b/css/StyleSheet1.css
@@ -1613,6 +1613,7 @@ th.apva-pvt-border {
 
 }
 
+
 #ipa-card-carousel-api a {
     color: #fff;
 }
@@ -1628,7 +1629,7 @@ th.apva-pvt-border {
 }
 
 #ipa-hero h3 {
-    font-size: 70px;
+    font-size: 100px;
     font-weight: 700;
     color: #505050;
 }
@@ -2279,8 +2280,138 @@ th.apva-pvt-border {
     background: #ededed;
 }
 
-@media (max-width: 430px) {
+.ad-search-fees-account-setup h2 {
+    color: #ee8a1d;
+    font-weight: 700;
+    font-size: 43px;
+    border-bottom: 4px solid var(--clr-orange);
+    padding-bottom: 18px;
+    margin-bottom: 30px
+}
 
+.ad-search-fees-account-setup h3 {
+    color: #373737;
+    font-weight: 700;
+    font-size: 26px;
+}
+
+.ad-search-fees-account-setup ul li {
+    font-size: 20px;
+    color: #373737;
+    margin-top: 30px;
+}
+
+.ad-full-width-btn {
+    background: var(--clr-orange);
+    color: #fff;
+    width: 100%;
+    font-size: 26px;
+    padding: 18px;
+    border-radius: 16px;
+}
+
+.ad-full-width-btn:hover {
+    background: #FF6600;
+    color: #fff
+
+}
+
+.ad-api-documentation-table, .ad-api-documentation-table th, .ad-api-documentation-table td {
+    border: 1px solid black;
+    padding: 12px 30px
+}
+
+#ad-sending-request-api p, #ad-sending-request-api li {
+    font-size: 20px;
+    color: #000
+}
+
+#ad-sending-request-api h2 {
+    font-size: 26px;
+    color: #373737;
+    font-weight: 700
+}
+
+.ad-scroll-link {
+    overflow-x: scroll;
+    background: #ededed;
+    color: #000;
+    font-size: 20px;
+    padding: 18px
+
+}
+
+
+
+.sb-text-slide-animation > div {
+    display: inline-block;
+    text-align: left;
+    height: 150px;
+    line-height: 150px;
+    overflow: hidden;
+    font-size: 120px;    
+}
+
+.sb-text-animation span {
+    display: block;
+    color: #505050 !important;
+    font-weight: 700 !important
+}
+
+.sb-text-animation {
+    position: relative;
+    animation: investigate-people-api-text-anim ease 8s infinite
+}
+
+@keyframes investigate-people-api-text-anim {
+    0% {
+        top: -750px;
+    }
+
+    10% {
+        top: -600px;
+    }
+
+    20% {
+        top: -600px;
+    }
+    
+
+    30% {
+        top: -450px;
+    }
+
+    40% {
+        top: -450px;
+    }
+
+    50% {
+        top: -300px;
+    }
+
+    60% {
+        top: -300px;
+    }
+
+    70% {
+        top: -150px;
+    }
+
+    80% {
+        top: -150px;
+    }
+
+    90% {
+        top: 0px;
+    }
+
+
+    100% {
+        top: 0px;
+    }   
+}
+
+@media (max-width: 430px) {
     .sb-api-data-integration-list {
         font-size: 16px !important;        
     }
@@ -2298,6 +2429,7 @@ th.apva-pvt-border {
 
 @media (max-width: 576px) {
 
+    
     #ipa-card-carousel-api .card.mt-mobile-30 {
         margin-top: 30px
     }
@@ -3156,7 +3288,62 @@ th.apva-pvt-border {
 
 @media (max-width: 768px) {
 
-    
+    .sb-text-slide-animation > div {
+        display: inline-block;
+        text-align: left;
+        height: 70px;
+        line-height: 70px;
+        overflow: hidden;
+        font-size: 60px;
+    }
+
+    @keyframes investigate-people-api-text-anim {
+        0% {
+            top: -350px;
+        }
+
+        10% {
+            top: -280px;
+        }
+
+        20% {
+            top: -280px;
+        }
+
+
+        30% {
+            top: -210px;
+        }
+
+        40% {
+            top: -210px;
+        }
+
+        50% {
+            top: -140px;
+        }
+
+        60% {
+            top: -140px;
+        }
+
+        70% {
+            top: -70px;
+        }
+
+        80% {
+            top: -70px;
+        }
+
+        90% {
+            top: 0px;
+        }
+
+
+        100% {
+            top: 0px;
+        }
+    }    
 
     #stsa-estimate-your-cost #stsa-records-per-month {
         flex-direction: column;
