--- a/css/StyleSheet1.css
+++ b/css/StyleSheet1.css
@@ -288,6 +288,10 @@ pre.sb-api-documentation-direction-api {
     background-size: cover
 }
 
+#people-search-api-list img {
+    width: 75px;
+}
+
 #people-search-api-list {
     background: #ededed
 }
