--- a/css/StyleSheet1.css
+++ b/css/StyleSheet1.css
@@ -2637,7 +2637,9 @@ html.sb-ad-overlay-active, body.sb-ad-overlay-active {
 
 @media (max-width: 576px) {
 
-
+.mobile-margin-top {
+	margin-top: 10px;
+}
     .ad-scroll-link {
         font-size: 16px;
     }
